k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-operations-dashboard
  namespace: kubernetes-operations-dashboard
  labels:
    app.kubernetes.io/name: kubernetes-operations-dashboard
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: kubernetes-operations-dashboard
  ports:
    - name: http
      port: 80
      targetPort: http
